[package]
name = "doryen-ui"
version = "0.1.0"
authors = ["jice <jice.nospam@gmail.com>"]
edition = "2018"
description = "An immediate ui toolkit for doryen-rs."
license = "MIT"
documentation = "https://docs.rs/doryen-ui"
repository = "https://github.com/jice-nospam/doryen-ui"
keywords = ["roguelike", "console", "imgui", "gui", "immediate"]

[dependencies]
doryen-rs={ version="1.2.*", optional=true }
unicode-segmentation = "1.6.0"

[features]
default=["doryen"]
doryen=["doryen-rs"]

[dev-dependencies]
doryen-rs="1.2.*"
